--- a/app/src/main/res/layout/me/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/me/layout/activity_edit_profile.xml
@@ -5,73 +5,113 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditProfile">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:orientation="horizontal"
+        android:layout_marginTop="50dp"
         android:gravity="center"
-        android:layout_marginTop="100dp">
+        android:orientation="vertical">
+
         <ImageView
             android:id="@+id/myphoto"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:background="@color/cardview_dark_background"/>
+            android:background="@color/cardview_dark_background" />
     </LinearLayout>
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="400dp">
+        android:layout_marginHorizontal="18dp"
+        android:layout_marginTop="230dp">
+
+
         <TextView
-            android:id="@+id/emailTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp" />
-
+            android:text="姓名 :"
+            android:textSize="24sp" />
         <EditText
             android:id="@+id/nameEd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
             android:inputType="textPersonName"
-            android:textSize="25sp" />
+            android:textSize="18sp" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Email : "
+            android:textSize="24sp"
+            />
+
+        <TextView
+            android:id="@+id/emailTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="電話 : "
+            android:textSize="24sp"
+            />
         <EditText
             android:id="@+id/phoneEd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
+            android:textSize="18sp"
             android:inputType="phone"
             android:maxLength="10"
-            android:digits="1234567890"
-            android:imeOptions="actionNext"/>
-        <EditText
-            android:id="@+id/introEd"
-            android:inputType="textMultiLine"
+            android:digits="1234567890"/>
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp" />
+            android:layout_marginTop="16dp"
+            android:text="自我介紹 : "
+            android:textSize="24sp"
+            />
+        <EditText
+            android:id="@+id/introEd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:inputType="textMultiLine"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp">
+
         <TextView
             android:id="@+id/cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="取消"
-            android:textColor="@color/black"/>
+            android:textSize="24sp"
+            android:layout_marginRight="20dp"/>
+
         <TextView
             android:id="@+id/finish"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="完成"/>
+            android:text="完成"
+            android:textColor="@color/black"
+            android:textSize="24sp"/>
+
     </LinearLayout>
 
 
